readability and made some scripts POSIX-compliant

--- a/.config/fontconfig/fonts.conf
+++ b/.config/fontconfig/fonts.conf
@@ -1,14 +1,14 @@
 <fontconfig>
   <alias>
     <family>serif</family>
-    <prefer><family>FreeSerif</family></prefer>
+    <prefer><family>Source Serif Pro</family></prefer>
   </alias>
   <alias>
     <family>sans-serif</family>
-    <prefer><family>FreeSans</family></prefer>
+    <prefer><family>Fira Sans</family></prefer>
   </alias>
   <alias>
     <family>monospace</family>
-    <prefer><family>FreeMono</family></prefer>
+    <prefer><family>Fira Code</family></prefer>
   </alias>
 </fontconfig>
