--- a/.config/ncmpcpp/config
+++ b/.config/ncmpcpp/config
@@ -8,7 +8,7 @@ alternative_header_first_line_format  = $b$3$aqqu$/a$9 {%t}|{%f} $3$atqq$/a$9$/b
 alternative_header_second_line_format = {{$b$8%b}{ (%y)}}|{%D}
 current_item_prefix                   = $(green)$r
 current_item_inactive_column_prefix   = $(green)$r
-browser_playlist_prefix               = "$3playlist "
+browser_playlist_prefix               = '$3playlist '
 selected_item_prefix                  = $3
 selected_item_suffix                  = $3
 modified_item_prefix                  = $3
@@ -18,9 +18,9 @@ volume_change_step                    = 1
 user_interface                        = alternative
 media_library_primary_tag             = genre
 media_library_hide_album_dates        = no
-connected_message_on_startup          = no
 header_text_scrolling                 = no
 cyclic_scrolling                      = yes
+display_volume_level                  = no
 colors_enabled                        = yes
 empty_tag_color                       = green
 main_window_color                     = green
