--- a/.config/mpd/mpd.conf
+++ b/.config/mpd/mpd.conf
@@ -1,6 +1,6 @@
 # general
 auto_update             "yes"
-bind_to_address         "localhost"
+bind_to_address         "0.0.0.0"
 db_file                 "~/.local/share/mpd/database"
 follow_inside_symlinks  "yes"
 follow_outside_symlinks "yes"
