--- a/.config/mpv/mpv.conf
+++ b/.config/mpv/mpv.conf
@@ -58,5 +58,5 @@ hr-seek-framedrop = 'no'
 interpolation     = 'yes'
 profile           = 'gpu-hq'
 scale-antiring    = 0.0
-video-sync        = 'display-resample'
+video-sync        = 'auto'
 vo                = 'gpu'
