rss and torr; fixed mpv and hosts; other small changes here and there

--- a/.config/ncmpcpp/config
+++ b/.config/ncmpcpp/config
@@ -13,7 +13,8 @@ selected_item_prefix                  = $3
 selected_item_suffix                  = $3
 modified_item_prefix                  = $3
 song_window_title_format              = {%a - }{%t}|{%f}
-song_columns_list_format              = (20)[green]{a} (6f)[green]{NE} (50)[white]{t|f:Title} (20)[green]{b} (7f)[green]{l}
+#song_columns_list_format              = (20)[green]{a} (6f)[green]{NE} (50)[white]{t|f:Title} (20)[green]{b} (7f)[green]{l}
+song_columns_list_format              = (5f)[green]{d} (6f)[green]{NE} (0)[white]{t} (5f)[green]{l}
 volume_change_step                    = 1
 user_interface                        = alternative
 media_library_primary_tag             = genre
