--- a/.config/mpv/mpv.conf
+++ b/.config/mpv/mpv.conf
@@ -25,7 +25,7 @@ screenshot-jpeg-quality    = 100
 screenshot-png-compression = 0
 screenshot-tag-colorspace  = 'yes'
 screenshot-template        = '%F-%wH-%wM-%wS-%wT'
-screenshot-directory       = '~/pix/captures'
+screenshot-directory       = '~/pix/shots'
 
 # sub
 blend-subtitles              = 'yes'
@@ -51,12 +51,12 @@ deband-grain      = 48
 deband-iterations = 4
 deband-range      = 16
 deband-threshold  = 48
-deband            = 'yes'
+#deband            = 'yes'
 dscale-antiring   = 0.0
 force-seekable    = 'yes'
 hr-seek-framedrop = 'no'
 interpolation     = 'yes'
-profile           = 'gpu-hq'
+#profile           = 'gpu-hq'
 scale-antiring    = 0.0
 video-sync        = 'audio'
 vo                = 'gpu'
