--- a/.config/git/config
+++ b/.config/git/config
@@ -1,6 +1,6 @@
 [user]
     name       = Matthew Carlson
-    email      = matt@mcarlson.xyz
+	email      = matt@mattcarlson.org
     signingkey = 9CC4E75365C16465FFE752C94DDBF97211D4EA31
 [commit]
     gpgsign    = true
