small fix for pass.sh

--- a/.config/mpv/mpv.conf
+++ b/.config/mpv/mpv.conf
@@ -28,7 +28,7 @@ screenshot-template        = '%F-%wH-%wM-%wS-%wT'
 screenshot-directory       = '~/pix/shots'
 
 # sub
-blend-subtitles              = 'yes'
+#blend-subtitles              = 'yes'
 demuxer-mkv-subtitle-preroll
 embeddedfonts                = 'no'
 sub-auto                     = 'fuzzy'
@@ -45,18 +45,19 @@ sub-shadow-color             = '0.0/0.0/0.0/0.25'
 sub-shadow-offset            = 0
 
 # vid
-cscale-antiring   = 0.0
-cursor-autohide   = 75
-deband-grain      = 48
-deband-iterations = 4
-deband-range      = 16
-deband-threshold  = 48
-#deband            = 'yes'
-dscale-antiring   = 0.0
-force-seekable    = 'yes'
-hr-seek-framedrop = 'no'
-interpolation     = 'yes'
-#profile           = 'gpu-hq'
-scale-antiring    = 0.0
-video-sync        = 'audio'
-vo                = 'gpu'
+#cscale-antiring   = 0.0
+#cursor-autohide   = 75
+#deband-grain      = 48
+#deband-iterations = 4
+#deband-range      = 16
+#deband-threshold  = 48
+##deband            = 'yes'
+#dscale-antiring   = 0.0
+#force-seekable    = 'yes'
+#hr-seek-framedrop = 'no'
+hwdec             = 'auto'
+#interpolation     = 'yes'
+##profile           = 'gpu-hq'
+#scale-antiring    = 0.0
+#video-sync        = 'audio'
+#vo                = 'gpu'
