--- a/.config/transmission-daemon/settings.json
+++ b/.config/transmission-daemon/settings.json
@@ -6,11 +6,16 @@
     "alt-speed-time-enabled": false,
     "alt-speed-time-end": 0,
     "alt-speed-up": 0,
+    "announce-ip": "",
+    "announce-ip-enabled": false,
+    "anti-brute-force-enabled": false,
+    "anti-brute-force-threshold": 100,
     "bind-address-ipv4": "0.0.0.0",
     "bind-address-ipv6": "::",
     "blocklist-enabled": false,
     "blocklist-url": "http://www.example.com/blocklist",
     "cache-size-mb": 16,
+    "default-trackers": "",
     "dht-enabled": true,
     "download-dir": "/home/mc/dl/",
     "download-queue-enabled": false,
@@ -26,7 +31,7 @@
     "peer-id-ttl-hours": 0,
     "peer-limit-global": 65535,
     "peer-limit-per-torrent": 65535,
-    "peer-port": 57187,
+    "peer-port": 62979,
     "peer-port-random-high": 65535,
     "peer-port-random-low": 49152,
     "peer-port-random-on-start": true,
@@ -47,13 +52,18 @@
     "rpc-host-whitelist-enabled": false,
     "rpc-password": "{e289f8a6e6c6829cf34b7c8ea6cd97498c1381caMfBs6RQq",
     "rpc-port": 9091,
+    "rpc-socket-mode": "0750",
     "rpc-url": "/transmission/",
     "rpc-username": "",
     "rpc-whitelist": "",
     "rpc-whitelist-enabled": false,
     "scrape-paused-torrents-enabled": false,
+    "script-torrent-added-enabled": false,
+    "script-torrent-added-filename": "",
     "script-torrent-done-enabled": true,
     "script-torrent-done-filename": "/home/mc/.local/bin/bar/torr.sh",
+    "script-torrent-done-seeding-enabled": false,
+    "script-torrent-done-seeding-filename": "",
     "seed-queue-enabled": true,
     "seed-queue-size": 0,
     "speed-limit-down": 4294966,
@@ -61,8 +71,10 @@
     "speed-limit-up": 0,
     "speed-limit-up-enabled": true,
     "start-added-torrents": true,
+    "tcp-enabled": true,
+    "torrent-added-verify-mode": "fast",
     "trash-original-torrent-files": false,
-    "umask": 18,
+    "umask": 0,
     "upload-slots-per-torrent": 0,
     "utp-enabled": true
 }
