--- a/.config/transmission-daemon/settings.json
+++ b/.config/transmission-daemon/settings.json
@@ -31,11 +31,11 @@
     "peer-id-ttl-hours": 0,
     "peer-limit-global": 65535,
     "peer-limit-per-torrent": 65535,
-    "peer-port": 61408,
+    "peer-port": 56861,
     "peer-port-random-high": 65535,
     "peer-port-random-low": 49152,
     "peer-port-random-on-start": true,
-    "peer-socket-tos": "le",
+    "peer-socket-tos": "default",
     "pex-enabled": true,
     "port-forwarding-enabled": true,
     "preallocation": 2,
@@ -74,7 +74,7 @@
     "tcp-enabled": true,
     "torrent-added-verify-mode": "fast",
     "trash-original-torrent-files": false,
-    "umask": "000",
+    "umask": 0,
     "upload-slots-per-torrent": 0,
     "utp-enabled": true
 }
